z-index fix

--- a/wp-content/themes/ch8se/less/style.less
+++ b/wp-content/themes/ch8se/less/style.less
@@ -123,7 +123,7 @@ header.site-header {
   max-width: @maxSiteWidth;
   margin: auto;
   position: fixed;
-  z-index: 1;
+  z-index: 1000;
 }
 
 .snapchat {
@@ -972,7 +972,7 @@ input {
   height: 100%;
   top: 0;
   left: 0;
-  z-index: 5000;
+  z-index: 500;
   display: none;
 
   .box {
